- fixes for SFTP (bug #3009485 - XML plugin exception with SFTP) - update changelog for 2.8.0